<resources>
    <string name="app_name">Leo</string>
    <string name="titulo_pantalla">Tu biblioteca</string>
    <string name="colecciones">Colecciones</string>
    <string name="descripcion">Menú</string>
    <string name="biblioteca">Biblioteca</string>
    <string name="leidos">Leídos</string>
    <string name="opcion_audiolibros">Audiolibros </string>
    <string name="buscar">Buscar</string>
    <string name="menu">Menú</string>
    <string name="pdf">PDF</string>
    <string name="estanteria">Biblioteca</string>
    <string name="terminados">Terminados</string>
    <string name="en_progreso">En progreso</string>
    <string name="descargados">Descargados</string>
    <string name="total">Total</string>
    <string name="titulo_libro">Título</string>
    <string name="autor_libro">Autor</string>
    <string name="tipo_libro">Tipo</string>
    <string name="estado_libro">Estado</string>
    <string name="mensaje_no_libros">No hay libros que mostrar</string>
    <string name="mensaje_no_aulibros">No hay libros que mostrar</string>
    <string name="mensaje_audiolibros">No hay audiolibros que mostrar</string>
    <string name="mensaje_error">Error al cargar libros</string>
    <string name="opcion_seleccion">Selecciona una opción</string>
    <string name="opcion_terminados">Leídos</string>
    <string name="opcion_libros">Libros</string>
    <string name="busquedaLocal">Buscar en local</string>
    <string name="busquedaInternet">Buscar en internet</string>
    <string name="preguntaBuscar">¿Dónde quieres buscar?</string>
    <string name="sinResultados">No hay resultados</string>
    <string name="opcion_pdf">PDF</string>
    <string name="max">100</string>
    <string name="tiempoInicial">00:00</string>
    <string name="tiempoTotal">00:00</string>
    <string name="btnPause">Pause</string>
    <string name="btnPlay">Play</string>
    <string name="titulo_desconocido">Título desconocido</string>
    <string name="autor_desconocido">Autor desconocido</string>
    <string name="página"> 0 / 0 </string>
    <string name="indicador_pagina">Página %1$d de %2$d</string>
    <string name="estadoLibro">Nuevo</string>
    <string name="bucar_libro">El libro se llama...</string>
    <string name="renombrar_libro">Renombrar...</string>
    <string name="eliminar_libro">Eliminar...</string>
    <string name="importar_libro">Importar...</string>
    <string name="descargar_libro">Descargar...</string>
    <string name="gurdar_libro">Guardar</string>
    <string name="cancelar">Cancelar</string>
    <string name="descripcion_volver">Volver a reproducir</string>
    <string name="descripcion_adelante">Avanzar 10 segundos</string>
    <string name="descripcion_play">Reproducir</string>
    <string name="descripcion_pause">Pausar</string>
    <string name="descripcion_portada">Portada del libro</string>
    <string name="descripcion_stop">Parar la reproducción</string>
    <string name="descripcion_opciones">Opciones del libro</string>
    <string name="descripcion_generales">Opciones generales</string>
    <string name="estado_leido">Leído</string>
    <string name="estado_nuevo">Nuevo</string>
    <string name="titulo_cambiado">Título cambiado</string>
    <string name="confirmar_eliminar">¿Estás seguro de que quieres eliminar este libro?</string>
    <string name="confirmar_eliminado">Libro eliminado</string>
    <string name="eliminar">Eliminar</string>
    <string name="eliminar_lib">Eliminar libro</string>
    <string name="renombrar">Renombrar</string>
    <string name="mensaje_titulo_vacio">El título no puede estar vacío</string>
    <string name="mensaje_titulo_ya_existe">Ya existe un libro con ese título</string>
    <string name="importar_audio">Importar audio</string>
    <string name="importar_pdf">Importar pdf</string>
    <string name="ya_existe">Ya existe un libro con el título</string>
    <string name="libro_importado">Libro importado</string>
    <string name="audiolibro_importado">Audiolibro importado</string>
    <string name="error_recepcion_audio">Audio no recibido</string>
    <string name="error_recepcion_pdf">PDF no recibido</string>
    <string name="mensaje_excepcion">No se ha podido abrir el flujo de entrada</string>
    <string name="formato_no_soportado">Formato no soportado</string>
    <string name="epub_importado">EPUB importado</string>
    <string name="futura_implementacion">Funcionalidad en desarrollo</string>
    <string name="descripcion_boton_volver_atras">Botón Volver atrás</string>
    <string name="volver_atras">Volver atrás</string>
</resources>