<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rooPdf"
    android:background="?attr/colorSurface"
    android:focusable="true"
    android:clickable="true">

    <com.github.barteksc.pdfviewer.PDFView
        android:id="@+id/pdfView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <ImageView
        android:id="@+id/ivPortada"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/descripcion_portada"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_libro_abierto"/>

    <TextView
        android:id="@+id/tvEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/mensaje_no_libros"
        android:textSize="25sp"
        android:textColor="@android:color/darker_gray"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvPageIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:layout_margin="16dp"
        android:padding="8dp"
        android:text="@string/página"
        android:textColor="@android:color/white"
        android:background="#80000000" />

<!-- Botón de volver atrás  flotante -->
    <ImageView
        android:id="@+id/btnVolverAtras"
        android:layout_width="24dp"
        android:layout_height="35dp"
        android:layout_gravity="top|start"
        android:layout_margin="16dp"
        android:padding="6dp"
        android:src="@drawable/ic_volver_atras"
        android:contentDescription="@string/volver_atras"
        android:background="@color/colorBtnVolverAtras"
        android:tint="@color/colorBotones"
        android:elevation="30dp"
        android:visibility="gone"
        />
</FrameLayout>