<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <!-- TÍTULO PANTALLA -->
    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_pantalla"
        android:textSize="24sp"
        android:textStyle="bold"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <!-- Tres puntos (a la derecha) -->
    <ImageView
        android:id="@+id/ivOpcionesBiblioteca"
        android:layout_width="25dp"
        android:layout_height="22dp"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        android:contentDescription="@string/descripcion_generales"
        android:focusable="true"
        android:padding="1dp"
        android:src="@drawable/ic_opciones_biblioteca"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/tvTitulo"
        app:tint="@android:color/white" />

    <!-- CABECERA COLECCIONES -->
    <LinearLayout
        android:padding="16dp"
        android:id="@+id/layoutColecciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="24dp"
        android:clickable="false"
        android:focusable="false"
        app:layout_constraintTop_toBottomOf="@id/tvTitulo"
        app:layout_constraintStart_toStartOf="parent">

        <!-- Botón volver atrás -->
        <ImageView
            android:id="@+id/ivVolverAtras"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_volver_atras"
            android:clickable="true"
            android:focusable="true"
            android:padding="2dp"
            android:visibility="visible"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/volver_atras"
            app:tint="@color/iconoColor"/>

        <ImageView
            android:id="@+id/ivMenu"
            android:layout_width="35dp"
            android:layout_height="30dp"
            android:clickable="true"
            android:focusable="true"
            android:padding="2dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/menu"
            android:contentDescription="@string/descripcion"
            app:tint="@color/iconoColor"/>

        <TextView
            android:id="@+id/tvColecciones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colecciones"
            android:textSize="18sp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_marginStart="8dp"/>
    </LinearLayout>
<!-- Contenedor de Fragments -->
    <FrameLayout
        android:id="@+id/fragmentContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/layoutColecciones"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <!-- Barra de navegación inferior -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigation"
        app:itemHorizontalTranslationEnabled="false"
        app:itemIconSize="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/bottom_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:labelVisibilityMode="labeled"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
