<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp">

    <!--Título-->
    <TextView
        android:id="@+id/tvColeccionesTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/colecciones"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <!--Botón menú o icono desplegable-->
    <ImageView
        android:id="@+id/ivMenuColecciones"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/menu"
        android:contentDescription="@string/descripcion"
        app:layout_constraintTop_toTopOf="@id/tvColeccionesTitulo"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!--MENSAJE CUANDO NO HAY LIBROS-->
    <TextView
        android:id="@+id/tvColeccionesMensaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mensaje_no_libros"
        android:textSize="16sp"
        android:textColor="@android:color/darker_gray"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/tvColeccionesTitulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <!--RecyclerView-->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvColecciones"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingTop="16dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="2"
        tools:listitem="@layout/layout_home"
        app:layout_constraintTop_toBottomOf="@id/tvColeccionesMensaje"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
